# cartography

./: .buildinfo  .dockerignore  .env  .env.template  .gitignore  .pre-commit-config.yaml  4.0.1  AGENTS.md  Dockerfile  MAINTAINERS.md  Makefile  NEW_INTEGRATION_GUIDE.md  PR_SUMMARY.md  README.md  SUPPORT.md  TODOLIST.md  app.py  application_graph_visualization.cypher  aws-auth-configmap.yaml  aws.requirements.txt  azure.requirements.txt  build-requirements.txt  contact.html  cortex.yaml  cubic.yaml  deploy.sh  dev-entrypoint.sh  dev-user-role.yaml  dev.Dockerfile  dev.requirements.txt  dist.Dockerfile  docker-compose.yml  eks-rbac-bindings.yaml  et --hard <commit_hash>  gcp.requirements.txt  index.html  info.html  install.html  logging.cfg  main.py  (+20 more)
.cache/: .gitignore
.claude/: settings.local.json
.codex/environments/: environment.toml
.doctrees/: environment.pickle  index.doctree
.doctrees/references/: aws_client.doctree  driftdetect.doctree  model.doctree  orm.doctree  rules.doctree  sync.doctree
.doctrees/usage/: schema.doctree
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: build-ecr-fix.yml  build-publish.yml  ossf-scorecard.yml  publish-to-ghcr-and-pypi.yml  sphinx.yml  stale.yml  test_suite.yml
cartography/: __init__.py  __main__.py  cli.py  config.py  helpers.py  settings.py  stats.py  sync.py  util.py  version.py
cartography/data/: azure_permission_relationships.yaml  gcp_permission_relationships.yaml  indexes.cypher  permission_relationships.yaml
cartography/driftdetect/: __main__.py  add_shortcut.py  cli.py  get_states.py  schema_docs.py
cartography/graph/: analysis.py  analysisbuilder.py  cleanupbuilder.py  job.py  querybuilder.py  sanitizer.py  session.py  statement.py
cartography/intel/: analysis.py  container_arch.py  create_indexes.py  dockerfile_parser.py  pagination.py  supply_chain.py
cartography/models/: aws_tagging.py  extra_labels.py  introspection.py  schema_docs.py
cartography/rules/: README.md  cli.py  formatters.py  runners.py
cartography/sinks/: file_export.py
cloudanix/: __init__.py
demo/: __main__.py
demo/seeds/: azure.py  base.py  bigfix.py  cloudlare.py  digitalocean.py  duo.py  github.py  keycloak.py  lastpass.py  openai.py  semgrep.py  slack.py  snipeit.py  terraform.py
dev/: developer-guide.html  index.html  writing-analysis-jobs.html  writing-intel-modules.html
docs/: README.md  azure-timing-instrumentation.md  build.sh  conf.py  requirements.txt  sync_markdown_txt_aliases.py
docs/agents/: cis-kubernetes-coverage-analysis.md  create-module.md  create-rule.md  enrich-ontology.md  refactor-legacy.md
docs/blog/: ai-agent-discovery.md
docs/iam-managed-type-classification/: plan.md
docs/root/: configuration.md  configure.md  index.md  install.md  module-list.md  module-list.md.txt  ops.md  ops.md.txt
docs/schema/: oci.md
libraries/: authlibrary.py
modules/_cartography-metadata/: schema.html
modules/aibom/: config.html  index.html  schema.html
modules/aws/: config.html  index.html  permissions-mapping.html  schema.html
modules/azure/: config.html  index.html  schema.html
modules/bigfix/: config.html  index.html  schema.html
modules/crowdstrike/: config.html  index.html  schema.html
modules/cve/: config.html  index.html  schema.html
modules/databricks/: schema.html
modules/digitalocean/: config.html  index.html  schema.html
modules/duo/: config.html  index.html  schema.html
modules/entra/: config.html  index.html  schema.html
modules/gcp/: config.html  index.html  schema.html
modules/github/: config.html  index.html  schema.html
modules/gsuite/: config.html  index.html  schema.html
modules/jamf/: index.html  schema.html
modules/kandji/: config.html  index.html  schema.html
modules/keycloak/: analysis.html  schema.html
modules/kubernetes/: config.html  index.html  schema.html
modules/lastpass/: config.html  index.html  schema.html
modules/oci/: config.html  index.html  schema.html
modules/okta/: config.html  index.html  schema.html
modules/ontology/: schema.html
references/: rules.html
reports/: schema_doc_contradictions.json  schema_doc_contradictions.md
scripts/: download_azure_timing_logs.py  generate_schema_docs.py  smoke_tgw.py
tests/: AGENTS.md  test_file_export.py  utils.py
tests/data/: wiz.py
usage/: applications.html  drift-detect.html  index.html  rules.html  samplequeries.html  schema.html  tutorial.html
utils/: context.py
(+3383 files in other folders)
